# yt-dlp-gui

./: .gitignore  PARALLEL_DEV.md  PLAN.md  PUBLISH.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/superpowers/specs/: 2026-05-27-audio-subtitle-ui-design.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: About.tsx  AnimeDecorations.tsx  BatchDownload.tsx  DownloadList.tsx  DownloadQueue.tsx  ExportImport.tsx  History.tsx  LoadingSkeleton.tsx  Notification.tsx  Settings.tsx  ShortcutHelp.tsx  Tooltip.tsx  URLInput.tsx  VideoInfo.tsx
src/hooks/: useKeyboardShortcuts.ts
