[package]
name = "sakura-fetch"
version = "1.0.0"
description = "SakuraFetch - A cute anime-style video downloader"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-execute", "shell-open", "dialog-open", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
